Fix image on mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -213,6 +213,10 @@
     }
   }
 
+  .banner-box {
+    background-image: none;
+  }
+
   // Wrap columns
   .banner-box .row {
     display: block;
